2005-02-05  Seth Nickell  <seth@gnome.org>

	* lib/sources/mozillasource.py:
        
	If there's only one profile, its the default even if it 
	doesn't have the Default=1 flag. This makes mozillasource.py
	work on stock (to Fedora at least) Firefox installs,
	where the auto-generated profile doesn't have the Default=
	flag set.
	
2005-02-05  Seth Nickell  <seth@gnome.org>

	* admin-tool/sabayon.glade:

	Set list view scrollbar policy to auto.

2005-02-04  Frank Arnold  <farnold@cvs.gnome.org>

	* configure.ac: Added de to ALL_LINGUAS.

2005-02-03  Mark McLoughlin  <mark@skynet.ie>

	* admin-tool/profilesdialog.py: hook up edit to
	protosession.

2005-02-03  Mark McLoughlin  <mark@skynet.ie>

	* admin-tool/profilesdialog.py: make new and delete
	do stuff.

2005-02-03  Mark McLoughlin  <mark@skynet.ie>

	* admin-tool/profilesdialog.py,
	  admin-tool/sabayon.glade: add a "New Profile" dialog.

2005-02-03  Mark McLoughlin  <mark@skynet.ie>

	* lib/storage.py: change things about a bit so that
	it creates its own temprary install directory.
	Add ProfileStorage::uninstall()
	Rename ProfileStorage::get_directory() to
	ProfileStorage::get_install_path()

	* admin-tool/monitorwindow.py,
	  admin-tool/sabayon.py,
	  lib/README.storage,
	  lib/protosession.py,
	  lib/sources/filessource.py,
	  lib/sources/gconfsource.py,
	  lib/userprofile.py: update for above change.
	
	* lib/sources/mozillasource.py: get_source() takes
	a ProfileStorage not profile_path

2005-02-03  Mark McLoughlin  <mark@skynet.ie>

	* admin-tool/profilesdialog.py: start implementing
	profiles manager dialog.
	
	* admin-tool/sabayon.glade: add profiles dialog.
	
	* lib/Makefile.am, lib/config.py.in: add some more
	variables.
	
	* lib/protosession.py: move some variables to config.py

2005-02-02  Mark McLoughlin  <mark@skynet.ie>

	* lib/protosession.py: apply the profile before
	launching the session.
	
	* lib/storage.py: don't throw an exception if asked
	to install when the profile doesn't yet exist.
	